Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56377

Hiding a window causes wayland compositors to crash

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.8.0
    • 5.8.0 Alpha
    • QPA: Wayland
    • None

      I'm not sure if this is a client or a server bug... or both.

      Running the latest pure-qml example with the attached client will cause the qt compositors after the buffer refactor (844204b2b) to crash, yet weston does not crash.

      A log of the application running with WAYLAND_DEBUG=1 has been attached.

      Why are there no wl_buffer.release events at all? Isn't it incorrect to destroy attached, but unreleased buffers?

        1. crash.log
          9 kB
        2. showhide.qml
          0.3 kB
        For Gerrit Dashboard: QTBUG-56377
        # Subject Branch Project Status CR V

            johanhelsing Johan Helsing
            johanhelsing Johan Helsing
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes