Fix crash on client hide

We need to check whether the buffer has content. Having a reference to
a null buffer is just as bad as not having a buffer at all.

Change-Id: I0bd31d0a70da2e21cda69e67d75ea5c8659c7c2a
Task-number: QTBUG-56377
Reviewed-by: Pier Luigi Fiorini <pierluigi.fiorini@hawaiios.org>
Reviewed-by: Johan Helsing <johan.helsing@qt.io>